[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/not_needed/Food.gd" type="Script" id=1]
[ext_resource path="res://Shaders/outline_shadermaterial.tres" type="Material" id=2]
[ext_resource path="res://Sprites/Farm/Barn_Iso.png" type="Texture" id=3]


[node name="Node2D" type="Node2D" groups=[
"resource",
"selectable",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 2 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Name" type="Label" parent="."]
margin_left = -20.0
margin_top = -70.0
margin_right = 18.0
margin_bottom = -56.0
text = "NAME"

[node name="CurrentAmount" type="Label" parent="."]
margin_left = 50.0
margin_top = -50.0
margin_right = 171.0
margin_bottom = -36.0
text = "CURRENT AMOUNT"

[node name="GatheringCost" type="Label" parent="."]
margin_left = 50.0
margin_top = -30.0
margin_right = 163.0
margin_bottom = -16.0
text = "GATHERING COST"

[node name="RegenerationRate" type="Label" parent="."]
margin_left = 50.0
margin_top = -10.0
margin_right = 184.0
margin_bottom = 4.0
rect_pivot_offset = Vector2( -90, -56 )
text = "REGENERATION RATE"

[node name="PlaceSize" type="Label" parent="."]
margin_left = 50.0
margin_top = 10.0
margin_right = 184.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( -90, -56 )
text = "PLACE SIZE"
